--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/landing.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/landing.html
@@ -15,7 +15,9 @@
     <div class="navbar">
         <div class="navbar-inner">
             <div class="container">
-                <a class="brand" href="/">&nbsp;</a>
+                <a class="logo" href="/">
+                    <img src="images/white_logo.png"></img>
+                </a>
                 <ul class="nav pull-right">
                     <li><a href="/blog">Blog</a></li>
                     <li><a href="/doc">Documentation</a></li>
