Dashboard under /dashboard instead of /dashboard.html. case 1225

--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/base.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/base.html
@@ -46,7 +46,7 @@
     ('/blog', 'blog', 'Blog'),
     ('/plans', 'plans', 'Plans'),
     ('/doc', 'documentation', 'Documentation'),
-    ('/dashboard.html', 'dashboard', 'Dashboard'),
+    ('/dashboard', 'dashboard', 'Dashboard'),
 ] -%}
 <body>
 
