--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/landing.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/landing.html
@@ -21,7 +21,7 @@
                 <ul class="nav pull-right">
                     <li><a href="/blog">Blog</a></li>
                     <li><a href="/doc">Documentation</a></li>
-                    <li><a href="/dashboard.html">Dashboard</a></li>
+                    <li><a href="/dashboard">Dashboard</a></li>
                 </ul>
             </div>
         </div>
