Dialog box get styling support. case 1231

--- a/com.dynamo.cr/com.dynamo.cr.web2/war/Defold.css
+++ b/com.dynamo.cr/com.dynamo.cr.web2/war/Defold.css
@@ -1,3 +1,8 @@
+/*
+ NOTE: This file is obsolete and should not be used
+ Only kept as a reference for a while
+ */
+
 /** Add css rules here for your application. */
 /** Example rules used by the template application (remove for your app) */
 
