--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/base.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/base.html
@@ -133,6 +133,7 @@
                     <ul class="unstyled">
                         <li><a href="/blog">Blog</a></li>
                         <li><a href="/plans">Plans</a></li>
+                        <li><a href="/about/company">Company</a></li>
                         <li><a href="/about/story">Story</a></li>
                         <li><a href="/about/eula">Terms of Service</a></li>
                         <li><a href="/about/privacy">Privacy Policy</a></li>
