--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/landing.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/landing.html
@@ -20,6 +20,7 @@
                 </a>
                 <ul class="nav pull-right">
                     <li><a href="/blog">Blog</a></li>
+                    <li><a href="/plans">Plans</a></li>
                     <li><a href="/doc">Documentation</a></li>
                     <li><a href="/dashboard">Dashboard</a></li>
                 </ul>
