User guide for scene editing. case 1209

--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/doc_index.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/doc_index.html
@@ -13,6 +13,7 @@
                 <h2>Guides</h2>
                 <ul class="unstyled">
                     <li><a href="/doc/introduction">Introduction</a></li>
+                    <li><a href="/doc/scene_editing">Scene Editing</a></li>
                     <li><a href="/doc/scripting_debugging">Scripting &amp; Debugging</a></li>
                     <li><a href="/doc/message_passing">Message Passing</a></li>
                     <li><a href="/doc/script_properties">Script Properties</a></li>
