--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/plans.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/plans.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %} {% block content %}
+<script type="text/javascript" src="/defold.js"></script>
 <div class="container" style="min-height: 500px;">
     <div class="page-header">
         <h1>Plans</h1>
     </div>
     <div class="row">
         <div class="span4">
-            <div class="well well-blue pricing">
+            <div class="well well-green pricing">
                 <h1>Free</h1>
                 <h2>
                     $0<small>/mo</small>
@@ -14,7 +15,6 @@
                     <li>Team size 1</li>
                     <li>5 Projects</li>
                 </ul>
-                <button class="btn btn-success btn-large">Sign Up</button>
             </div>
         </div>
         <div class="span4">
@@ -27,7 +27,6 @@
                     <li>Team size 2</li>
                     <li>5 Projects</li>
                 </ul>
-                <button class="btn btn-success btn-large">Sign Up</button>
             </div>
         </div>
         <div class="span4">
@@ -40,8 +39,18 @@
                     <li>Team size 3+</li>
                     <li>5 Projects</li>
                 </ul>
-                <button class="btn btn-success btn-large">Sign Up</button>
             </div>
+        </div>
+    </div>
+    <div class="container" style="margin-top: 30px; text-align: center;">
+        <h2>Sign up for beta</h2>
+        <p class="marketing-byline">We invite from the beta list at regular intervals</p>
+        <div class="span12" style="text-align: center;">
+            <form onsubmit="return signUp();" class="validate form-inline">
+                <input type="email" value="" style="padding: 9px 14px;" class="span4 input-large email" id="email"
+                    placeholder="email address" required="">
+                <button type="submit" class="btn btn-primary btn-large">Sign up</button>
+            </form>
         </div>
     </div>
 </div>
