Fixed copy for error pages. case 1239

--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/500.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/500.html
@@ -4,7 +4,7 @@
         <div class="span12">
             <div class="hero-unit">
                 <h1>Sorry, something went wrong</h1>
-                <p>We'll look into the problem as soon as possible.</p>
+                <p>If this seems out of order, please let us know about it in our <a href="http://defold.userecho.com">forums</a>.</p>
             </div>
         </div>
     </div>
