--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/doc_index.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/doc_index.html
@@ -21,6 +21,7 @@
                     <li><a href="/doc/physics">Physics</a></li>
                     <li><a href="/doc/tiles">Tiles</a></li>
                     <li><a href="/doc/game_project">Project Settings</a></li>
+                    <li><a href="/doc/ios">iOS Development</a></li>
                 </ul>
             </div>
         </div>
