Plans copy. case 1156

--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/plans.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/plans.html
@@ -4,6 +4,12 @@
     <div class="page-header">
         <h1>Plans</h1>
     </div>
+    <p>
+        We charge for Defold by the size of your team.
+        We assume that the larger your team is, the more your project is worth.
+        The fees below are for each month and team member.
+        You can currently only create a limited amount of projects, but join as many as you like.
+    </p>
     <div class="row">
         <div class="span4">
             <div class="well well-green pricing">
@@ -42,9 +48,13 @@
             </div>
         </div>
     </div>
+    <p>
+        During the Beta phase, we have removed the upper limit on the team size for the <b>Small</b> plan.
+        When the Beta phase ends, that plan will be limited to a team size of two people.
+    </p>
     <div class="container" style="margin-top: 30px; text-align: center;">
-        <h2>Sign up for beta</h2>
-        <p class="marketing-byline">We invite from the beta list at regular intervals</p>
+        <h2>Sign up for Beta Access</h2>
+        <p class="marketing-byline">We invite from the beta list at regular intervals.</p>
         <div class="span12" style="text-align: center;">
             <form onsubmit="return signUp();" class="validate form-inline">
                 <input type="email" value="" style="padding: 9px 14px;" class="span4 input-large email" id="email"
