Copy for landing page. case 1189

--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/landing.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/landing.html
@@ -29,7 +29,7 @@
     </div>
     <div class="landing-heading">
         <div>
-            <h1>Creative Tools For Digital Rebels</h1>
+            <h1>Create Games Like A Pro</h1>
         </div>
     </div>
     <div class="laptop">
@@ -43,39 +43,61 @@
     </div>
 </div>
 <div style="height: 50px;"></div>
-<div class="container features features-red">
-    <div class="row">
-        <div class="span8">
-            <h2>Faster than lightning</h2>
-            <p>Prototype, build, polish and iterate Test your changes in the running game within seconds iOS will be
-                supported in beta, Android later</p>
-            <h2>Simple tools, complete power</h2>
-            <p>Make tiled graphics and animated sprites with physics that just work Everything is scriptable - even
-                the rendering pipeline! Runs on Windows, Mac and Linux</p>
-        </div>
-        <div class="span4">
-            <div class="feature-image">
-                <img src="images/pong.png" alt="Pong" />
-            </div>
-        </div>
-    </div>
-</div>
 <div class="container features features-green">
     <div class="row">
-        <div class="span4">
+        <div class="span3">
+            <h2>No Setup</h2>
+            <p>The Defold Editor is the only software you need to install to create your games. It runs on Windows, OS X and Linux.</p>
+        </div>
+        <div class="span3">
+            <h2>Flexible</h2>
+            <p>The engine builds on simple concepts used to create complex things. It is extremely data-driven and flexible. The game logic and rendering pipeline are scripted in Lua.</p>
+        </div>
+        <div class="span3">
+            <h2>Fast Iterations</h2>
+            <p>The time for a change to appear in the running game is less than a second, even on your iOS device. Prototype, build, polish and iterate.</p>
+        </div>
+        <div class="span3">
             <div class="feature-image">
                 <img src="images/cogs.png" alt="Cogs" />
             </div>
         </div>
-        <div class="span8">
-            <div class="well_">
-                <h2>Collaboration included</h2>
-                <p>Share your projects with your friends Sync your changes with them through Defold - no IT or
-                    servers required</p>
-                <h2>We LOVE game dev</h2>
-                <p>Features and fixes are released every few weeks, not years Report an issue and we will fix it as
-                    soon as we can Defold is made by senior professional game developers - we would love to help you
-                    make your games shine! We have a ton of exciting ideas yet to be implemented</p>
+    </div>
+</div>
+<div class="container features features-red">
+    <div class="row">
+        <div class="span3">
+            <div class="feature-image">
+                <img src="images/pong.png" alt="Pong" />
+            </div>
+        </div>
+        <div class="span3">
+            <h2>Collaboration</h2>
+            <p>From the editor, you can work with your friends through our servers. Add them to your project in the Dashboard and you are all set. Your team doesn't even need to have the same OS.</p>
+        </div>
+        <div class="span3">
+            <h2>iOS Development</h2>
+            <p>Through the Defold App, your iOS device connects to the editor and you can use it to test and tweak your game in real-time.</p>
+        </div>
+        <div class="span3">
+            <h2>Tool Set</h2>
+            <p>We have specialized tools for creating 2D games. Features include tiled graphics and animated sprites. Collision shapes can be automatically created from image data.</p>
+        </div>
+    </div>
+</div>
+<div class="container features features-orange">
+    <div class="row">
+        <div class="span4">
+            <h2>Support</h2>
+            <p>We work hard to get you up to speed as quickly and painless as possible. We do this by providing competent support in the forums as well as frequently updating and extending the documentation.</p>
+        </div>
+        <div class="span4">
+            <h2>Progressive</h2>
+            <p>Defold is run by passionate game developers. We are making a service we would love to use ourselves. We have a long list of exciting ideas and features to come in the future.</p>
+        </div>
+        <div class="span4">
+            <div class="feature-image">
+                <img src="images/smiley.png" alt="Smiley" />
             </div>
         </div>
     </div>
@@ -94,11 +116,11 @@
         </div>
         <div class="span6">
             <blockquote class="testi-blue">
-                <p>"The Defold engine and tools are built on powerful and simple concepts that are fun to use
-                    because they work with me and allows me to focus on my game's specific design problems. It clearly
-                    shows that the Defold developers have put their long industry experience and massive design and
-                    implementation effort into creating a great, unique platform."</p>
-                <small>Mikael Säker <br> (Battlefield 3, The Darkness, The Chronicles of Riddick)
+                <p>"I have used various mobile app platforms in the past, but Defold's service
+                    came highly recommended. With its powerful and simple platform, i was
+                    able to work on my game app development faster, easier, and cost less than 
+                    hiring a whole team of experts. Defold helps you create games just like a Pro!"</p>
+                <small>Mikael Behrenfors <br> (Wakajaka)
                 </small>
             </blockquote>
         </div>
@@ -106,8 +128,8 @@
 </div>
 <div class="container" style="margin-top: 30px; text-align: center;">
     <div class="row">
-        <h2>Sign up for beta</h2>
-        <p class="marketing-byline">We invite from the beta list at regular intervals</p>
+        <h2>Sign up for Beta Access</h2>
+        <p class="marketing-byline">We invite from the beta list at regular intervals.</p>
         <div class="span12" style="text-align: center;">
             <form onsubmit="return signUp();" class="validate form-inline">
                 <input type="email" value="" style="padding: 9px 14px;" class="span4 input-large email" id="email"
