--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/doc_index.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/doc_index.html
@@ -11,6 +11,7 @@
         <div class="span4">
             <div class="well well-blue">
                 <h2>Guides</h2>
+                <p>Detailed explanations of different areas of the platform</p>
                 <ul class="unstyled">
                     <li><a href="/doc/introduction">Introduction</a></li>
                     <li><a href="/doc/scene_editing">Scene Editing</a></li>
@@ -28,7 +29,7 @@
         <div class="span4">
             <div class="well well-orange">
                 <h2>Tutorials</h2>
-                <p>Step by step tutorials and videos</p>
+                <p>Step-by-step tutorials</p>
                 <ul class="unstyled">
                     <li><a href="/doc/side_scroller">Side-Scroller</a></li>
                 </ul>
@@ -47,7 +48,7 @@
         <div class="span4">
             <div class="well well-pink">
                 <h2>Reference</h2>
-                <p>Script function and message reference</p>
+                <p>Script functions and messages</p>
                 <ul class="unstyled">
                     <li><a href="/ref/engine">Engine</a></li>
                     <li><a href="/ref/go">GameObject</a></li>
