Fixed plans copy. case 1156

--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/plans.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/plans.html
@@ -6,7 +6,6 @@
     </div>
     <p>
         We charge for Defold by the size of your team.
-        We assume that the larger your team is, the more your project is worth.
         The fees below are for each month and team member.
         You can currently only create a limited amount of projects, but join as many as you like.
     </p>
@@ -48,6 +47,7 @@
             </div>
         </div>
     </div>
+    <h2>Important</h2>
     <p>
         During the Beta phase, we have removed the upper limit on the team size for the <b>Small</b> plan.
         When the Beta phase ends, that plan will be limited to a team size of two people.
