Updated landing page copy. case 1189

--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/landing.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/landing.html
@@ -51,11 +51,11 @@
         </div>
         <div class="span3">
             <h2>Flexible</h2>
-            <p>The engine builds on simple concepts used to create complex things. It is extremely data-driven and flexible. The game logic and rendering pipeline are scripted in Lua.</p>
+            <p>The building blocks are simple, but can be used to create complex things. The game logic and rendering pipeline are scripted in Lua.</p>
         </div>
         <div class="span3">
             <h2>Fast Iterations</h2>
-            <p>The time for a change to appear in the running game is less than a second, even on your iOS device. Prototype, build, polish and iterate.</p>
+            <p>Edit scripts and other content and see the changes take effect in a second on your iPad or iPhone. Prototype, build, polish and iterate.</p>
         </div>
         <div class="span3">
             <div class="feature-image">
@@ -73,11 +73,11 @@
         </div>
         <div class="span3">
             <h2>Collaboration</h2>
-            <p>From the editor, you can work with your friends through our servers. Add them to your project in the Dashboard and you are all set. Your team doesn't even need to have the same OS.</p>
+            <p>You don't need any extra software or service to work with your friends. Content can be synchronized in the editor.</p>
         </div>
         <div class="span3">
             <h2>iOS Development</h2>
-            <p>Through the Defold App, your iOS device connects to the editor and you can use it to test and tweak your game in real-time.</p>
+            <p>Install the Defold App on your iOS device and it connects to the editor. Then you can work on the game in real-time on your device.</p>
         </div>
         <div class="span3">
             <h2>Tool Set</h2>
@@ -89,7 +89,7 @@
     <div class="row">
         <div class="span4">
             <h2>Support</h2>
-            <p>We work hard to get you up to speed as quickly and painless as possible. We do this by providing competent support in the forums as well as frequently updating and extending the documentation.</p>
+            <p>We have a lot of experience in game development and are happy to share it with you in the forums.</p>
         </div>
         <div class="span4">
             <h2>Progressive</h2>
