--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/plans.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/plans.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %} {% block content %}
 <script type="text/javascript" src="/defold.js"></script>
+<link href="{{root}}plans.css" rel="stylesheet">
 <div class="container" style="min-height: 500px;">
     <div class="page-header">
         <h1>Plans</h1>
@@ -52,6 +53,27 @@
         During the Beta phase, we have removed the upper limit on the team size for the <b>Small</b> plan.
         When the Beta phase ends, that plan will be limited to a team size of two people.
     </p>
+    <h2>What people say</h2>
+    <div class="row" style="margin-top: 10px;">
+        <div class="span6">
+            <blockquote class="testi-red">
+                <p>"The Defold engine and tools are built on powerful and simple concepts that are fun to use
+                    because they work with me and allows me to focus on my game's specific design problems. It clearly
+                    shows that the Defold developers have put their long industry experience and massive design and
+                    implementation effort into creating a great, unique platform."</p>
+                <small>Mikael Säker <br> (Battlefield 3, The Darkness, The Chronicles of Riddick)</small>
+            </blockquote>
+        </div>
+        <div class="span6">
+            <blockquote class="testi-blue">
+                <p>"I have used various mobile app platforms in the past, but Defold's service
+                    came highly recommended. With its powerful and simple platform, i was
+                    able to work on my game app development faster, easier, and cost less than
+                    hiring a whole team of experts. Defold helps you create games just like a Pro!"</p>
+                <small>Mikael Behrenfors <br> (Wakajaka)</small>
+            </blockquote>
+        </div>
+    </div>
     <div class="container" style="margin-top: 30px; text-align: center;">
         <h2>Sign up for Beta Access</h2>
         <p class="marketing-byline">We invite from the beta list at regular intervals.</p>
