Fixed plans copy. case 1156

--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/plans.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/plans.html
@@ -6,9 +6,16 @@
         <h1>Plans</h1>
     </div>
     <p>
-        We charge for Defold by the size of your team.
-        The fees below are for each month and team member.
+        We charge for Defold by the size of your teams.
+        By team size, we mean the total number of people working on a project.
+        For example, if you get the <b>Small</b> plan you can join projects with one member, or invite one person to your own projects.
+        The fees below are per person and month.
         You can currently only create a limited amount of projects, but join as many as you like.
+    </p>
+    <h2>Important</h2>
+    <p>
+        During the Beta phase, we have removed the upper limit on the team size for the <b>Small</b> plan.
+        When the Beta phase ends, that plan will be limited to a team size of two people.
     </p>
     <div class="row">
         <div class="span4">
@@ -48,11 +55,6 @@
             </div>
         </div>
     </div>
-    <h2>Important</h2>
-    <p>
-        During the Beta phase, we have removed the upper limit on the team size for the <b>Small</b> plan.
-        When the Beta phase ends, that plan will be limited to a team size of two people.
-    </p>
     <h2>What people say</h2>
     <div class="row" style="margin-top: 10px;">
         <div class="span6">
