Enlarged smiley, removed padding and fixed some landing-copy. case 1189

--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/landing.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/landing.html
@@ -51,7 +51,7 @@
         </div>
         <div class="span3">
             <h2>Flexible</h2>
-            <p>The building blocks are simple, but can be used to create complex things. The game logic and rendering pipeline are scripted in Lua.</p>
+            <p>The building blocks are simple, but can be used to create complex features. The game logic and rendering pipeline are scripted in Lua.</p>
         </div>
         <div class="span3">
             <h2>Fast Iterations</h2>
