Made the image larger and put in some filler to align it column-wise. case 1189

--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/landing.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/landing.html
@@ -95,7 +95,8 @@
             <h2>Progressive</h2>
             <p>Defold is run by passionate game developers. We are making a service we would love to use ourselves. We have a long list of exciting ideas and features to come in the future.</p>
         </div>
-        <div class="span4">
+        <div class="span1">&nbsp;</div>
+        <div class="span3">
             <div class="feature-image">
                 <img src="images/smiley.png" alt="Smiley" />
             </div>
