Changed from smiley picture to mascot. case 1189

--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/landing.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/landing.html
@@ -98,7 +98,7 @@
         <div class="span1">&nbsp;</div>
         <div class="span3">
             <div class="feature-image">
-                <img src="images/smiley.png" alt="Smiley" />
+                <img src="images/mascot.png" alt="Smiley" />
             </div>
         </div>
     </div>
@@ -119,7 +119,7 @@
             <blockquote class="testi-blue">
                 <p>"I have used various mobile app platforms in the past, but Defold's service
                     came highly recommended. With its powerful and simple platform, i was
-                    able to work on my game app development faster, easier, and cost less than 
+                    able to work on my game app development faster, easier, and cost less than
                     hiring a whole team of experts. Defold helps you create games just like a Pro!"</p>
                 <small>Mikael Behrenfors <br> (Wakajaka)
                 </small>
