Inline-images on landing page

--- a/com.dynamo.cr/com.dynamo.cr.web2/war/bootstrap/css/bootstrap.css
+++ b/com.dynamo.cr/com.dynamo.cr.web2/war/bootstrap/css/bootstrap.css
@@ -5145,12 +5145,6 @@ div.search-result {
           border-radius: 6px;
 }
 
-.ref-doc hr {
-  margin: 24px 0;
-  border: 0;
-  border-top: 1px solid #ffb400;
-}
-
 .ref-doc h3.name {
   color: #008ee3;
 }
@@ -5158,6 +5152,6 @@ div.search-result {
 .ref-doc code {
   padding: 0;
   color: black;
-  background-color: transparent;
+  background-color: none;
   border: 0;
 }
