--- a/com.dynamo.cr/com.dynamo.cr.web2/war/landing.css
+++ b/com.dynamo.cr/com.dynamo.cr.web2/war/landing.css
@@ -38,7 +38,7 @@ body {
     color: white;
     text-shadow: none;
     font-size: 16px;
-    font-weight: 200;
+    font-weight: normal;
     border-radius: 10px;
     margin-right: 10px;
     padding-left: 24px;
