Fixed input guide. case 1293
* Removed eula and story from docs since they don't belong there (about)
* Added input-guide-reference to the ios guide.

--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/doc_index.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/doc_index.html
@@ -18,6 +18,7 @@
                     <li><a href="/doc/scripting_debugging">Scripting &amp; Debugging</a></li>
                     <li><a href="/doc/message_passing">Message Passing</a></li>
                     <li><a href="/doc/script_properties">Script Properties</a></li>
+                    <li><a href="/doc/input">Input</a></li>
                     <li><a href="/doc/reload">Hot Reloading</a></li>
                     <li><a href="/doc/physics">Physics</a></li>
                     <li><a href="/doc/tiles">Tiles</a></li>
