Track video and signup with google analytics. case 1330
* New function trackPage() in defold.js
* New function getServerUrl(). Default is cr.defold.com:9998
  if not cookie 'url' is set
* set and clear cookie functions
* defold.js is now default
* Improved signup with simple feedback

--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/base.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/base.html
@@ -168,6 +168,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script src="{{root}}bootstrap/js/bootstrap.js"></script>
+    <script src="{{root}}defold.js"></script>
     <script>
 	</script>
     {% block end %}
