News-letter support. case 1332
* New REST-resource /news_letter
* New table news_subscribers with subscription info
* Migration functionality
 - Users, prospects and invited are subscribed to news-list
* Users not yet subscribed are subscribed automatically
  in signup, registration and when invited. Users with 
  subscribed-state set to false are not
  automatically re-subscribed.
* News-letter "tool" in webmanage
 - SendNewsMailTask for batch processing

--- a/com.dynamo.cr/com.dynamo.cr.webmanage/templates/base.html
+++ b/com.dynamo.cr/com.dynamo.cr.webmanage/templates/base.html
@@ -17,6 +17,7 @@
             <div class="container">
                 <a class="brand" href="/">Defold Manage</a>
                 <ul class="nav">
+                    <li><a href="/news_letter.html">News Letter</a></li>
                     <li><a href="/test.html">Test</a></li>
                 </ul>
                 <ul class="nav pull-right">
