--- a/com.dynamo.cr/com.dynamo.cr.webmanage/templates/logout.html
+++ b/com.dynamo.cr/com.dynamo.cr.webmanage/templates/logout.html
@@ -4,5 +4,7 @@
 <script type="text/javascript">
     clearCookie('auth');
     clearCookie('email');
+    clearCookie('first_name');
+    clearCookie('last_name');
 </script>
 {% endblock %}
