--- a/com.dynamo.cr/com.dynamo.cr.webrlog/templates/base.html
+++ b/com.dynamo.cr/com.dynamo.cr.webrlog/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Defold - Manage</title>
+<title>Defold - Log</title>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
 <link href="/bootstrap/css/bootstrap.css" rel="stylesheet">
 
