Language-fix for signup. case 1330

--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/landing.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/landing.html
@@ -132,7 +132,7 @@
 <div class="container" style="margin-top: 30px; text-align: center;">
     <div class="row">
         <h2>Sign up for Beta Access</h2>
-        <p class="marketing-byline">We invite from the beta list at regular intervals. Note that we don't send confirmation email.</p>
+        <p class="marketing-byline">We invite from the beta list at regular intervals. Note that we don't send any confirmation email.</p>
         <div id="signUp" class="span12" style="text-align: center;">
             <form onsubmit="return signUp();" class="validate form-inline">
                 <input type="email" value="" style="padding: 9px 14px;" class="span4 input-large email" id="email"
