Open registration support with max-cap. case 1362
* New configuration option 'open_registration_max_users'
* Changed signup to beta. Users are automatically
  invited if 'open_registration_max_users' isn't
  reached. Otherwise the user will be placed in 
  the prospect queue
* Replaced beta-signup with link to /signup
* Acceptable styling for openid-page
* Fixed invalid email links (defold.com -> www.defold.com)

--- a/com.dynamo.cr/com.dynamo.cr.web2/less/defold.less
+++ b/com.dynamo.cr/com.dynamo.cr.web2/less/defold.less
@@ -248,4 +248,15 @@ div.search-result {
     .well-color(@orange);
 }
 
+/* Signup */
+
+a.signup {
+    font-size: 24px;
+    padding-left: 1.6em;
+    padding-right: 1.6em;
+    padding-top: 0.7em;
+    padding-bottom: 0.7em;
+    margin-top: 0.7em;
+    margin-bottom: 0.7em;
+}
 
