--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/landing.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/landing.html
@@ -44,7 +44,11 @@
         </div>
     </div>
 </div>
-<div style="height: 50px;"></div>
+<div style="height: 30px;"></div>
+<div style="text-align: center;">
+    <a href="/signup" class="signup btn btn-primary btn-large">Sign up now!</a>
+</div>
+<div style="height: 30px;"></div>
 <div class="container features features-green">
     <div class="row">
         <div class="span3">
@@ -129,18 +133,10 @@
         </div>
     </div>
 </div>
-<div class="container" style="margin-top: 30px; text-align: center;">
-    <div class="row">
-        <h2>Sign up for Beta Access</h2>
-        <p class="marketing-byline">We invite from the beta list at regular intervals. Note that we don't send any confirmation email.</p>
-        <div id="signUp" class="span12" style="text-align: center;">
-            <form onsubmit="return signUp();" class="validate form-inline">
-                <input type="email" value="" style="padding: 9px 14px;" class="span4 input-large email" id="email"
-                    placeholder="email address" required="">
-                <button type="submit" class="btn btn-primary btn-large">Sign up</button>
-            </form>
-        </div>
-    </div>
+
+<div style="text-align: center;">
+    <a href="/signup" class="signup btn btn-primary btn-large">Sign up now!</a>
 </div>
+
 <hr class="soften">
 {% endblock %}
