--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/plans.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/plans.html
@@ -57,6 +57,11 @@
             </div>
         </div>
     </div>
+
+    <div style="text-align: center;">
+        <a href="/signup" class="signup btn btn-primary btn-large">Sign up now!</a>
+    </div>
+
     <h2>What people say</h2>
     <div class="row" style="margin-top: 10px;">
         <div class="span6">
@@ -76,17 +81,6 @@
                     hiring a whole team of experts. Defold helps you create games just like a Pro!"</p>
                 <small>Mikael Behrenfors <br> (Wakajaka)</small>
             </blockquote>
-        </div>
-    </div>
-    <div class="container" style="margin-top: 30px; text-align: center;">
-        <h2>Sign up for Beta Access</h2>
-        <p class="marketing-byline">We invite from the beta list at regular intervals. Note that we don't send any confirmation email.</p>
-        <div id="signUp" class="span12" style="text-align: center;">
-            <form onsubmit="return signUp();" class="validate form-inline">
-                <input type="email" value="" style="padding: 9px 14px;" class="span4 input-large email" id="email"
-                    placeholder="email address" required="">
-                <button type="submit" class="btn btn-primary btn-large">Sign up</button>
-            </form>
         </div>
     </div>
 </div>
