Fixed some copy for sign up. case 1362

--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/signup.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/signup.html
@@ -8,8 +8,8 @@
     </div>
     <div class="container" style="margin-top: 30px;">
         <div class="span6">
-        <p class="marketing-byline">Enter you email address to signup for Defold. Please read the message presented after sign-up. <br/>
-        Either an email will be sent with a registration link or you will placed in a queue due to high volume of registrations.
+        <p class="marketing-byline">Enter you email address to sign up for Defold. Please read the message presented after signing up. <br/>
+            Either an email will be sent with a registration link or you will be placed in a queue due to a high volume of registrations.
         </p>
 
         <div class="alert" id="registrationAlert" style="display: none;">
