Subscribe/unsubscribe to news-letter support. case 1008

--- a/com.dynamo.cr/com.dynamo.cr.web2/less/defold.less
+++ b/com.dynamo.cr/com.dynamo.cr.web2/less/defold.less
@@ -260,3 +260,12 @@ a.signup {
     margin-bottom: 0.7em;
 }
 
+/* gwt stuff */
+
+span.gwt-CheckBox label {
+    display: inline-block;
+}
+
+span.gwt-CheckBox input {
+    margin-right: 0.3em;
+}
