Kinematics article on web site. case 1210
* Split into article and script

--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/doc_index.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/doc_index.html
@@ -29,10 +29,11 @@
         </div>
         <div class="span4">
             <div class="well well-orange">
-                <h2>Tutorials</h2>
-                <p>Step-by-step tutorials</p>
+                <h2>Tutorials and Articles</h2>
+                <p>Step-by-step tutorials and informative articles</p>
                 <ul class="unstyled">
                     <li><a href="/doc/side_scroller">Side-Scroller</a></li>
+                    <li><a href="/doc/platformer">Platformer</a></li>
                 </ul>
             </div>
             <div class="well well-orange">
